@@ -222,6 +222,7 @@ export(geom_bin2d)
 export(geom_blank)
 export(geom_boxplot)
 export(geom_contour)
+export(geom_count)
 export(geom_crossbar)
 export(geom_density)
 export(geom_density2d)
@@ -343,6 +344,7 @@ export(scale_linetype_continuous)
 export(scale_linetype_discrete)
 export(scale_linetype_identity)
 export(scale_linetype_manual)
+export(scale_radius)
 export(scale_shape)
 export(scale_shape_continuous)
 export(scale_shape_discrete)
